--- a/weather/style.css
+++ b/weather/style.css
@@ -1,165 +1,156 @@
-body{
-    background-image: url('pic.jpg');
-    color: white;
+*{
+    margin: 0;
+    padding: 0;
     font-family: 'Poppins', sans-serif;
 }
 
-.at_a_glance{
-    margin-left: 10vw;
-    margin-top: 40vh;
-    height: 40vh;
-    width: 40vw;
-
-    display: grid;
-    grid-template-columns: 15vw 9vw 8vw;
-    grid-template-rows: 10vh 10vh 10vh 10vh;
-}
-
-#temp{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    grid-row: 1/3;
-    font-size: 10vh;
-}
-
-#city{
-    font-size: 5vh;
-}
-
-.mobileCity{
-    font-size: 5vh;
-    margin-top: 0;
-    opacity: 0;
-    text-align: center;
-}
-
-#icon{
-    margin-top: 25px;
-}
-
-.condn{
-    margin-left: 1vw;
-    text-align: center;
-    font-weight: 100;
-}
-
-@media(max-width: 1393.6px) {
-    .condn{
-        opacity: 0;
-    }
-}
-
-@media(max-width: 1090.4px){
-    .cityTime{
-        opacity: 0;
-    }
-
-    .mobileCity{
-        opacity: 1;
-    }
-
-    #temp{
-        display: inline;
-    }
-
-    .at_a_glance{
-        margin-top: 10vh;
-    }
-}
-
-/* title */
-.title{
-    font-weight: 800;
-    font-size: 2rem;
-    margin: 20vh 0 0 12.25vw;
-    display: inline-block;
-}
-
-/*sidebar*/
-.sidebar{
+.background{
+    background-image: url('https:source.unsplash.com/1600x900/?landscape');
+    width: 100dvw;
+    height: 100dvh;
     position: absolute;
-    right: 0;
-    top: 0;
-
-    height: 100vh;
-    width: 35vw;
-
-    text-align: center;
-
-    backdrop-filter: blur(5px);
-}
-
-#search{
-    width: 420px;
-    height: 48px;
-    padding: 0;
-    outline: 0;
-    border: none;
-    background-color: transparent;
-    color: white;
-    border-bottom: 1px solid white;
-    font-weight: 900;
-
-    position: absolute;
-    right: 65px;
-    top: 10px;
-}
-
-#searchbtn{
-    width: 60px;
-    height: 60px;
-
-    position: absolute;
-    top: 0;
-    right: 0;
-
-    margin: 0;
-    padding: 0;
-    outline: 0;
-    border: none;
-
-    background-color: rgb(130, 159, 154);
-    color: white;
-    font-size: 25px;
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 .header{
-    margin: 80px 0 10px 0;
-    font-size: large;
-    font-size: 25px;
-    font-weight: 700;
-    opacity: .8;
+    width: 100dvw;
+    height: 40dvh;    
+    color: black;
+    text-shadow:
+        0.07rem 0 white,
+        0 0.07rem white,
+        -0.07rem 0 white,
+        0 -0.07rem white;
+}
+
+.heading{
+    margin: 1% 0 0 3%;
+    display: inline-block;
+    width: 24%;
+}
+
+.input{
+    height: 30px;
+    width: 50%;
+    text-align: center;
+    border-radius: 15px;
+    border: none;
+    border-left: solid black;
+    border-bottom: solid black;
+    color: white;
+    text-shadow: none;
+    background-color: transparent;
+    backdrop-filter: blur(10px);
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+input:focus, textarea {
+    outline: none !important;
+}
+
+.search-btn{
+    width: 32px;
+    height: 32px;
+    border-radius: 50%;
+    background-color: transparent;
+    backdrop-filter: blur(10px);    
+    background-color: rgba(0, 0, 0, 0.5);
+    text-shadow:
+        0.07rem 0 white,
+        0 0.07rem white,
+        -0.07rem 0 white,
+        0 -0.07rem white;
+}
+
+.main{
+    width: 100dvw;
+    height: 25dvh;
+    display: flex;
+    justify-content: space-evenly;
+    color: white;
 }
 
 .details{
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
-    grid-row-gap: 5px;
-    font-size: 15px;
-}
+    width: 42.5dvw;
+    height: 25dvh;
 
-.parameter{
-    text-align: left;
-    margin-left: 20%;
-    font-weight: 200;
-}
-
-.value{
-    text-align: right;
-    font-weight: 400;
-    margin-right: 20%;
-}
-
-/*forecast cards*/
-.card{
+    color: white;
+    background-color: rgba(0, 0, 0, 0.5);
     border-radius: 10px;
-    box-shadow:  6px 6px 2px rgba(0, 0, 0, 0.2);
-    height: 160px;
-    width: 120px;
-    margin: 20px 29px 0 0;
-    font-weight: 300;
-    background-color: rgb(80, 112, 109);
+
+    display: flex;
+    justify-content: space-evenly;
+    align-items: self-start;
+}
+
+.details>div{
+    margin: 2.5% 0 2.5% 0;
+}
+
+.ver-divider{
+    height: 80%;
+    border: solid white;
+    margin: 0;
+    border-width: 0 1px 0 1px;
+    opacity: 0.5;
+}
+
+.big-icon{
+    height: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.big-icon img{
+    height: 80px;
+}
+.temp{
+    height: 80%;
+    padding-top: 8px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.date{
+    font-weight: bold;
+    font-size: 17px;
+}
+.big-temp{
+    margin: -10px 0 -10px 0;
+    font-size: 80px;
+    color: rgb(255, 131, 8);
+    text-shadow:
+        0.05rem -0.05rem black,
+        0.05rem 0.05rem black;
+
+}
+.more-details{
+    height: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: baseline;
+}
+
+.hourly{
+    width: 42.5dvw;
+    height: 25dvh;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.5);
+    border-radius: 10px;
+
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+
+.hcard{
+    width: 11%;
+    height: 18dvh;
 
     display: flex;
     flex-direction: column;
@@ -167,44 +158,109 @@ body{
     align-items: center;
 }
 
-.icon{
-    margin-top: 10px;
+.hcard img{
+    width: 90%;
 }
 
-.cards{
+.htemp{
+    font-size: 20px;
+    margin-bottom: 5px;
+    font-weight: 600;
+}
+
+.footer{
+    width: 100%;
+    height: 35dvh;
+    background-image: linear-gradient(transparent 0%, black 100%);
+    backdrop-filter: blur(1px);
+    
+    text-shadow:
+        0.05rem 0 black,
+        0 0.05rem black;
+
+
     display: flex;
-    flex-wrap: wrap;
     justify-content: space-evenly;
     align-items: center;
-
-
-    height: 300px;
-    width: 537.6px;
-
-    margin-left: 24px;
 }
 
-@keyframes spin {
-    100%{transform:rotate(360deg);}
+.card{
+    height: 70%;
+    width: 8%;
+    color: white;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
 }
 
-#sun{
-    animation: spin 8s linear infinite;
+.card-date{
+    font-weight: 600;
+}
+.card div{
+    margin-left: 10px;
+    margin-top: 10px;
+}
+.card div img{
+    height: 50px;
+    margin: 10px 0 5px 0;
 }
 
-.divider{
-    width: 450px;
-    border: 1px solid white;
-    margin: 10px 0 0 45px;
-    opacity: .5;
-}
+@media screen and (max-width: 900px) {
+    .heading{
+        margin:none;
+        width: auto;
+    }
+    .header{
+        display:flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height: 20dvh;
+    }
 
-.title1{
-    font-weight: 800;
-    font-size: 2rem;
-    display: inline-block;
+    .details{
+        display: block;
+        height: 50dvh;
+        width: 70dvw;
+    }
 
-    position: absolute;
-    top: 30vh;
-    right: 40vw;
-}
+    .main{
+        justify-content: center;
+    }
+
+    .hourly{
+        opacity: 0;
+        height: 0;
+        width: 0;
+        margin: 0;
+    }
+    .more-details{
+        opacity: 0;
+        height: 0;
+        width: 0;
+        margin: 0;
+    }
+    .big-icon{
+        height: 20dvh;
+    }
+    .ver-divider{
+        opacity: 0;
+        height: 0;
+        width: 0;
+        margin: 0;
+    }
+    .footer{
+        opacity: 0;
+        height: 0;
+        width: 0;
+        margin: 0;
+    }
+    .card{        
+        opacity: 0;
+        height: 0;
+        width: 0;
+        margin: 0;
+    }
+  }
